--- a/.github/workflows/python-version.yml
+++ b/.github/workflows/python-version.yml
@@ -4,7 +4,7 @@ run-name: p
 on: [push]
 
 jobs:
-look python
+look python:
 
 run-on: ubuntu-latest
 
@@ -13,5 +13,5 @@ steps:
 - uses: actions/setup-python@v3
   with:
   pyton-version: "3.11"
- - run: pip install flask
+
  - run: pip -V
