--- a/.github/workflows/python-version.yml
+++ b/.github/workflows/python-version.yml
@@ -4,14 +4,11 @@ run-name: p
 on: [push]
 
 jobs:
-look python:
-
-run-on: ubuntu-latest
-
-steps:
-- uses: actions/checkout@v3
-- uses: actions/setup-python@v3
-  with:
-  pyton-version: "3.11"
-
- - run: pip -V
+  look-python:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v3
+      with:
+        pyton-version: "3.11"
+    - run: pip -V
