--- a/.github/workflows/python-version.yml
+++ b/.github/workflows/python-version.yml
@@ -10,5 +10,5 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v3
       with:
-        pyton-version: "3.11"
+        python-version: "3.11"
     - run: pip -V
